# black_hole

./: CMakeLists.txt  CMakePresets.json  read.me  vcpkg-configuration.json  vcpkg.json
src/: Uitility.h  main.cpp
src/shaders/: rayTracer.glsl
